<resources>
    <string name="app_name">freight</string>
    <string name="signin_btn">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="check_account">Please check your account.</string>
    <string name="current_car_count">Current Cars</string>
    <string name="move_it">Please Move it</string>
    <string name="i_will_move_it">I\'ll move that</string>
    <string name="car">Car</string>
    <string name="type">Type</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="hope_time">Hope Time</string>
    <string name="hope_price">Hope Price</string>
    <string name="addition">Addition</string>
    <string name="request">Request</string>
    <string name="bindding">Bidding</string>
</resources>
