<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <data>

        <variable
                name="mainViewModel"
                type="com.bomi.hapo.freight_app.viewmodel.MainViewModel"
        />
    </data>


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/layout_padding_size"
            android:background="@drawable/main">

        <TextView android:id="@+id/main_current_car_title_tv"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="#FFFFFF"
                  android:text="@string/current_car_count"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintBottom_toTopOf="@+id/main_current_car_count_tv"
                  app:layout_constraintHorizontal_bias="0.1"
                  app:layout_constraintVertical_bias="0.75"
                  app:layout_constraintVertical_chainStyle="packed"
        />
        <TextView android:id="@+id/main_current_car_count_tv"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/current_car_count_text_field_height"
                  android:textColor="#FFFFFF"
                  android:textSize="@dimen/current_car_count_text_size"
                  android:gravity="right|center_vertical"
                  android:layout_marginRight="@dimen/textview_margin_size"
                  android:background="@drawable/white_underline_background"
                  app:layout_constraintTop_toBottomOf="@+id/main_current_car_title_tv"
                  app:layout_constraintBottom_toTopOf="@+id/main_move_it_btn"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:order_car_count="@{mainViewModel.orderCarCount}"
        />
        <Button android:id="@+id/main_move_it_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_move_button_height"
                android:text="@string/move_it"
                app:layout_constraintTop_toBottomOf="@+id/main_current_car_count_tv"
                app:layout_constraintBottom_toTopOf="@+id/main_i_will_move_it_btn"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
        />
        <Button android:id="@+id/main_i_will_move_it_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_move_button_height"
                android:text="@string/i_will_move_it"
                app:layout_constraintTop_toBottomOf="@+id/main_move_it_btn"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
        />


    </android.support.constraint.ConstraintLayout>
</layout>