<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="userViewModel"
                type="com.bomi.hapo.freight_app.viewmodel.UserViewModel"
        />
    </data>


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="@dimen/layout_padding_size"
            android:background="@drawable/main">

        <EditText
                android:id="@+id/login_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColorHint="#EAEAEA"
                android:textColor="#FFFFFF"
                android:text="@{userViewModel.user.email}"
                android:afterTextChanged="@{(editable) -> userViewModel.afterEmailTextChanged(editable)}"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/login_password_et"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintVertical_bias="0.7"
                android:layout_marginBottom="@dimen/input_field_margin_size"
        />

        <EditText
                android:id="@+id/login_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/password"
                android:textColorHint="#EAEAEA"
                android:textColor="#FFFFFF"
                android:text="@{userViewModel.user.password}"
                android:afterTextChanged="@{(editable) -> userViewModel.afterPasswordTextChanged(editable)}"
                app:layout_constraintTop_toBottomOf="@+id/login_email_et"
                app:layout_constraintBottom_toTopOf="@+id/login_signin_btn"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
        />

        <Button
                android:id="@+id/login_signin_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_btn"
                app:layout_constraintTop_toBottomOf="@+id/login_password_et"
                app:layout_constraintBottom_toTopOf="@+id/login_signup_tv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                android:onClick="@{()-> userViewModel.onSignInBtnClick()}"
        />

        <TextView
                android:id="@+id/login_signup_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="#ffffff"
                app:layout_constraintTop_toBottomOf="@+id/login_signin_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
        />

        <ImageView
                android:id="@+id/login_email_valid_iv"
                android:layout_width="@dimen/valid_icon_width"
                android:layout_height="@dimen/valid_icon_width"
                android:src="@drawable/uncheck"
                app:layout_constraintTop_toTopOf="@+id/login_email_et"
                app:layout_constraintRight_toRightOf="@+id/login_email_et"
                app:layout_constraintBottom_toBottomOf="@+id/login_email_et"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:email_valid="@{userViewModel.emailValid}"
        />

        <ImageView
                android:id="@+id/login_password_valid_iv"
                android:layout_width="@dimen/valid_icon_width"
                android:layout_height="@dimen/valid_icon_width"
                android:src="@drawable/uncheck"
                app:layout_constraintTop_toTopOf="@+id/login_password_et"
                app:layout_constraintRight_toRightOf="@+id/login_password_et"
                app:layout_constraintBottom_toBottomOf="@+id/login_password_et"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:password_valid="@{userViewModel.passwordValid}"
        />


    </android.support.constraint.ConstraintLayout>
</layout>